--- a/homework_02.ipynb
+++ b/homework_02.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.9.23\n"
+      "Python 3.9.12\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b5e30c9f",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "exp-tracking-env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -416,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
